frontend/src/styles/DropdownStyles/dropdownBtnStyle.css
@import "@/styles/colors/colors.css";
@import "@/styles/fontStyles.css";
@import "@/styles/button.css";

#personal-subjects {
  width: 100%;
}

:root {
  --width-s: 45vw;
  --width-m: 35vw;
  --width-l: 25vw;
  --width-xl: 440px;
  --height: 5vw;
  --height-xl: 66px;
}

#wrapper {
  width: 100%;
  --row-height: 48px;
}

#dropbtn {
  padding: 0;
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 64px;
  text-decoration: none;
  transform: translate3d(0, 0, 0);
  vertical-align: baseline;
  white-space: nowrap;
  touch-action: manipulation;
  user-select: none;
  -webkit-user-select: none;
}

#dropbtn.open {
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
}
.menubtn {
  width: 100%;
  height: 100%;
  border-radius: 0px;
  text-indent: 16px;
  border: none;
}
#content-wrapper {
  display: flex;
  width: 100%;
}
#content-with-subjects {
  display: flex;
  flex-direction: column;
  flex: 1;
}
.unfollow-btn {
  position: absolute;
  right: 0;
  height: 100%;
  width: 48px;
  border-radius: 0px;
  border: none;
  opacity: 0;
  transition: opacity 00ms;
}
.subject-line-wrapper:hover .unfollow-btn {
  opacity: 1;
}

#search-bar {
  text-indent: 16px;
  text-align: center;
  padding: 0px;
  border: none;
  width: 100%;
  height: var(--row-height);
  background-color: initial;
  font-family: var(--font-family);
  color: var(--col-fg-default);

  &:focus {
    outline: none;
  }

  &:hover {
    background-color: var(--col-bg-lighter);
  }
}
.dropdown-content {
  display: flex;
  flex-direction: column;
  border-top: none;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}
.scrollable-content {
  max-height: var(--width-xl);
  overflow-y: scroll;
}
.dropdown {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.btn-line {
  display: flex;
}

.subject-line-wrapper {
  display: flex;
  flex: 1;
  position: relative;
  height: var(--row-height);
  border-radius: 0;
  border-left: none;
  border-right: none;
  border-bottom: none;
}

@media screen and (max-width: 2200px) {
  .scrollable-content {
    max-height: var(--width-l); /* TODO */
  }
}

@media screen and (max-width: 900px) {
  .scrollable-content {
    max-height: var(--width-m);
  }
}

@media screen and (max-width: 550px) {
  .scrollable-content {
    max-height: var(--width-s);
  }
}

#no-personal-subjects {
  height: 64px;
  border: 0;
  color: var(--col-fg-accent);
}

